# windvir

./: .gitignore  Cargo.toml  README.md  TODO  build.rs  default_settings.json  team_list
.github/workflows/: rust.yml
data/: figures.json  Здания элеваторского района (big data).geojson
include/: collision detection.h  trans.h
libwindvir/: Cargo.toml
libwindvir/src/: lib.rs
reports/: WindVir_Report_1.md
src/: control.rs  etc.rs  main.rs
src/collisions/: mod.rs
src/control/: keyboard.rs  mod.rs
src/defs/: app.rs  error.rs  mod.rs  synthetic.rs
src/etc/: mod.rs
src/ffi/: mod.rs  trans.c
src/graphics/: app.rs  color_shader.vert  mod.rs  random_color_shader.vert  vertex_shader.vert
src/graphics/shaders/: color_shader.vert  field_color_shader.vert  field_vertex_shader.vert  random_color_shader.vert  vertex_shader.vert
src/json/: default_json.rs  figures.rs  geojson.rs  mod.rs
src/json/default_json/: mod.rs
src/scripts/object builder/: index.html  main.js
