[package]
name = "windvir"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
serde = { version = "1.0.93", features = ["derive"] }
glium = { version = "0.34.0", features = ["glutin_backend", "simple_window_builder"] }
winit = "0.29.10"
image = "0.24.8"
