[package]
name = "windvir"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
serde = { version = "1.0.93", features = ["derive"] }
glium = "0.32"
log = "0.4.20"


[build-dependencies]
cc = "1.0.90"


[features]
wayland = []
