[package]
name = "windvir"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
serde = { version = "1.0.93", features = ["derive"] }
glium = "0.32"
log = "0.4.21"
simple_logger = "4.3.3"
earcutr = "0.4.2"
rand = "0.8.5"
image = "0.25.1"


[build-dependencies]
cc = "1.0.90"
